<?xml version="1.0"?>
<package>
  <name>laser_to_pointcloud2</name>
  <version>0.0.0</version>
  <description>The laser_to_pointcloud2 package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
